--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "scripts": {
-    "backend:linux": "cd backend && python -m venv venv && source venv/bin/activate && pip install -r requirements.txt && uvicorn app.main:app --reload",
-    "backend:windows": "cd backend && python -m venv venv && venv/Scripts/activate && pip install -r requirements.txt && uvicorn app.main:app --reload"
+    "backend:linux": "cd backend/ && python -m venv venv && source venv/bin/activate && pip install -r requirements.txt && uvicorn app.main:app --reload",
+    "backend:windows": "cd backend/ && source venv/Scripts/activate && pip install -r requirements.txt && uvicorn app.main:app --reload"
   }
 }
